--- a/tasks/fpm.yml
+++ b/tasks/fpm.yml
@@ -1,14 +1,23 @@
 ---
 
-- name: APT | Install PHP-FPM
+- name: APT | Install PHP-FPM for Debian based systems
   apt:
     pkg: "{{ php_fpm_service }}"
+    state: "{{ 'present' if php_install_fpm else 'absent' }}"
+  when: ansible_os_family == 'Debian'
+
+- name: SERVICE | Enable service on FreeBSD
+  service:
+    name: "{{ php_fpm_service }}"
+    enabled: "{{ 'yes' if php_install_fpm else 'no' }}"
+  when: ansible_os_family == 'FreeBSD'
 
 - name: LINEINFILE | PHP configuration
   lineinfile:
     dest: '{{ php_cli_ini }}'
     regexp: '^;?{{ item.key }}'
     line: '{{ item.key }} = {{ item.value }}'
+    create: yes
   with_dict: "{{ php_ini | combine(php_ini_fpm) }}"
   notify: restart php-fpm
 
