--- a/tests/includes/pre_Debian.yml
+++ b/tests/includes/pre_Debian.yml
@@ -2,7 +2,7 @@
 
 - name: SET_FACT | Prepare test vars
   set_fact:
-    __nginx_site_dir: /etc/nginx/sites-enabled
+    __nginx_conf: /etc/nginx/nginx.conf
 
 - name: APT | Install packages
   apt:
