Support PHP 7.3 on Debian/FreeBSD
- Fixes some issues on FreeBSD (Vagrant problems, loading vars files...)
- Add some platforms on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,20 @@
 env:
   - PLATFORM='docker-debian-stretch-php70' ANSIBLE_VERSION='ansible>=2.0,<2.1'
   - PLATFORM='docker-debian-stretch-php71' ANSIBLE_VERSION='ansible>=2.0,<2.1'
+  - PLATFORM='docker-debian-stretch-php72' ANSIBLE_VERSION='ansible>=2.0,<2.1'
+  - PLATFORM='docker-debian-stretch-php73' ANSIBLE_VERSION='ansible>=2.0,<2.1'
   - PLATFORM='docker-debian-stretch-php70' ANSIBLE_VERSION='ansible>=2.1,<2.2'
   - PLATFORM='docker-debian-stretch-php71' ANSIBLE_VERSION='ansible>=2.1,<2.2'
+  - PLATFORM='docker-debian-stretch-php72' ANSIBLE_VERSION='ansible>=2.1,<2.2'
+  - PLATFORM='docker-debian-stretch-php73' ANSIBLE_VERSION='ansible>=2.1,<2.2'
   - PLATFORM='docker-debian-stretch-php70' ANSIBLE_VERSION='ansible>=2.2,<2.3'
   - PLATFORM='docker-debian-stretch-php71' ANSIBLE_VERSION='ansible>=2.2,<2.3'
+  - PLATFORM='docker-debian-stretch-php72' ANSIBLE_VERSION='ansible>=2.2,<2.3'
+  - PLATFORM='docker-debian-stretch-php73' ANSIBLE_VERSION='ansible>=2.2,<2.3'
   - PLATFORM='docker-debian-stretch-php70' ANSIBLE_VERSION='ansible>=2.3,<2.4'
   - PLATFORM='docker-debian-stretch-php71' ANSIBLE_VERSION='ansible>=2.3,<2.4'
+  - PLATFORM='docker-debian-stretch-php72' ANSIBLE_VERSION='ansible>=2.3,<2.4'
+  - PLATFORM='docker-debian-stretch-php73' ANSIBLE_VERSION='ansible>=2.3,<2.4'
   - PLATFORM='docker-ubuntu-xenial-php70' ANSIBLE_VERSION='ansible>=2.0,<2.1'
   - PLATFORM='docker-ubuntu-xenial-php70' ANSIBLE_VERSION='ansible>=2.1,<2.2'
   - PLATFORM='docker-ubuntu-xenial-php70' ANSIBLE_VERSION='ansible>=2.2,<2.3'
