--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,11 @@
   include_vars: "OS_Family_{{ ansible_os_family }}.yml"
 
 - name: INCLUDE_VARS | Related to OS version
-  include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml"
+  include_vars: "{{ item }}"
+  with_first_found:
+    - "{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml"
+    - "{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
+    - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
 
 - name: APT | Install PHP packages
   apt:
