--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,3 +5,10 @@
     name: '{{ php_fpm_service }}'
     state: restarted
   when: php_install_fpm
+  notify: docker restart php-fpm
+
+- name: docker restart php-fpm
+  command: 'service {{ php_fpm_service }} restart'
+  args:
+    warn: false
+  when: ansible_virtualization_type == 'docker'
