--- a/tasks/fpm.yml
+++ b/tasks/fpm.yml
@@ -18,12 +18,12 @@
     regexp: '^;?{{ item.key }}'
     line: '{{ item.key }} = {{ item.value }}'
     create: yes
-  with_dict: "{{ php_ini | combine(php_ini_fpm) }}"
+  loop: "{{ php_ini | combine(php_ini_fpm) | dict2items }}"
   notify: restart php-fpm
 
 - name: TEMPLATE | Deploy pool configuration
   template:
     src: etc/__php__/fpm/pool.d/pool.conf.j2
     dest: '{{ php_fpm_pool_dir }}/{{ item.pool_name }}.conf'
-  with_items: "{{ php_fpm_poold }}"
+  loop: "{{ php_fpm_poold }}"
   notify: restart php-fpm
