--- a/tests/includes/pre_Debian.yml
+++ b/tests/includes/pre_Debian.yml
@@ -6,18 +6,19 @@
 
 - name: APT | Install packages
   apt:
-    pkg: "{{ item }}"
+    pkg: "{{ p }}"
     update_cache: yes
     cache_valid_time: 3600
-  with_items:
-    - apt-transport-https
-    - ca-certificates
-    - curl
-    - lsb-release
-    - nginx
+  vars:
+    p:
+      - apt-transport-https
+      - ca-certificates
+      - curl
+      - lsb-release
+      - nginx
 
 - name: INCLUDE | Sury
   include: Debian/sury.yml
   when: >
-    ansible_distribution_major_version | version_compare(9, 'eq') and
-    php_version | version_compare('7.1', 'ge')
+    ansible_distribution_major_version is version(9, 'eq') and
+    php_version is version('7.1', 'ge')
