--- a/tests/includes/pre_Debian.yml
+++ b/tests/includes/pre_Debian.yml
@@ -17,8 +17,8 @@
       - lsb-release
       - nginx
 
-- name: INCLUDE | Sury
-  include: Debian/sury.yml
+- name: INCLUDE_TASKS | Sury
+  include_tasks: Debian/sury.yml
   when: >
     ansible_distribution_major_version is version(9, 'eq') and
     php_version is version('7.1', 'ge')
