--- a/tests/test.yml
+++ b/tests/test.yml
@@ -25,6 +25,16 @@
           display_errors: 'Off'
         php_admin_flag:
           memory_limit: '128M'
+      - pool_name: 'test_ansible2'
+        pm: 'dynamic'
+        pm_max_children: 250
+        pm_start_servers: 10
+        pm_min_spare_servers: 10
+        pm_max_spare_servers: 20
+        php_flag:
+          display_errors: 'On'
+        php_admin_flag:
+          memory_limit: '64M'
 
   pre_tasks:
 
