Manages PHP 7.4 on Debian

--- a/tests/includes/pre_Debian.yml
+++ b/tests/includes/pre_Debian.yml
@@ -16,9 +16,10 @@
       - curl
       - lsb-release
       - nginx
+      - vim
 
 - name: INCLUDE_TASKS | Sury
   include_tasks: Debian/sury.yml
   when:
-    (ansible_distribution_major_version is version('9', 'eq')) and
-    (php_version is version('7.1', 'ge'))
+    ((ansible_distribution_major_version is version('9', 'eq')) and (php_version is version('7.1', 'ge'))) or
+    ((ansible_distribution_major_version is version('10', 'eq')) and (php_version is version('7.4', 'ge')))
