--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,7 @@ php_install_fpm: true
 php_install_xdebug: false
 php_extra_packages: []
 php_xdebug_package: null
+php_autoremove_default_pool: false
 
 # php.ini config
 php_ini:
