--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,37 @@
 env:
-  - PLATFORM='docker-debian-stretch-php70' ANSIBLE_VERSION='ansible>=2.6,<2.7'
-  - PLATFORM='docker-debian-buster-php73' ANSIBLE_VERSION='ansible>=2.6,<2.7'
-  - PLATFORM='docker-ubuntu-xenial-php70' ANSIBLE_VERSION='ansible>=2.6,<2.7'
-  - PLATFORM='docker-ubuntu-bionic-php72' ANSIBLE_VERSION='ansible>=2.6,<2.7'
-  - PLATFORM='docker-ubuntu-bionic-php72' ANSIBLE_VERSION='ansible>=2.6,<2.7'
-  - PLATFORM='docker-debian-stretch-php70' ANSIBLE_VERSION='ansible>=2.7,<2.8'
-  - PLATFORM='docker-debian-stretch-php74' ANSIBLE_VERSION='ansible>=2.7,<2.8'
-  - PLATFORM='docker-debian-buster-php73' ANSIBLE_VERSION='ansible>=2.7,<2.8'
-  - PLATFORM='docker-debian-buster-php74' ANSIBLE_VERSION='ansible>=2.7,<2.8'
-  - PLATFORM='docker-ubuntu-xenial-php70' ANSIBLE_VERSION='ansible>=2.7,<2.8'
-  - PLATFORM='docker-ubuntu-bionic-php72' ANSIBLE_VERSION='ansible>=2.7,<2.8'
-  - PLATFORM='docker-ubuntu-bionic-php72' ANSIBLE_VERSION='ansible>=2.7,<2.8'
+  global:
+    - VAGRANT_VERSION='2.2.18'
+  jobs:
+    - PLATFORM='docker-debian-stretch-php70'  ANSIBLE_VERSION='ansible>=2.11,<2.12'
+    - PLATFORM='docker-debian-stretch-php74'  ANSIBLE_VERSION='ansible>=2.11,<2.12'
+    - PLATFORM='docker-debian-buster-php73'   ANSIBLE_VERSION='ansible>=2.11,<2.12'
+    - PLATFORM='docker-debian-bullseye-php74' ANSIBLE_VERSION='ansible>=2.11,<2.12'
+    - PLATFORM='docker-debian-bullseye-php80' ANSIBLE_VERSION='ansible>=2.11,<2.12'
+    - PLATFORM='docker-debian-buster-php74'   ANSIBLE_VERSION='ansible>=2.11,<2.12'
+    - PLATFORM='docker-ubuntu-xenial-php70'   ANSIBLE_VERSION='ansible>=2.11,<2.12'
+    - PLATFORM='docker-ubuntu-bionic-php72'   ANSIBLE_VERSION='ansible>=2.11,<2.12'
 
-sudo: required
-
-dist: trusty
+os:
+  - linux
+dist: focal
 
 language: python
-python: 2.7
+python:
+  - 3.8
 
 services:
   - docker
 
 before_install:
-  - wget https://releases.hashicorp.com/vagrant/2.0.1/vagrant_2.0.1_x86_64.deb
-  - sudo dpkg -i vagrant_2.0.1_x86_64.deb
+  - sudo apt-get -q update
+  - sudo apt-get install -y yamllint
+  - sudo wget -nv https://releases.hashicorp.com/vagrant/${VAGRANT_VERSION}/vagrant_${VAGRANT_VERSION}_x86_64.deb
+  - sudo dpkg -i vagrant_${VAGRANT_VERSION}_x86_64.deb
 
 install:
-  - pip install "$ANSIBLE_VERSION"
+  - sudo pip install "ansible-core$ANSIBLE_VERSION"
+  - sudo pip install ansible-lint
+  - ansible-galaxy collection install ansible.posix community.general
 
 script:
   - VAGRANT_DEFAULT_PROVIDER=docker vagrant up $PLATFORM
@@ -37,6 +41,14 @@ script:
     && (echo 'Idempotence test: pass' && exit 0)
     || (echo 'Idempotence test: fail' && exit 1)
   - VAGRANT_DEFAULT_PROVIDER=docker vagrant status
+  - >
+    yamllint .
+    && (echo 'YAML lint test: pass' && exit 0)
+    || (echo 'YAML lint test: fail' && exit 1)
+  - >
+    ansible-lint -v tests/test.yml
+    && (echo 'Ansible lint test: pass' && exit 0)
+    || (echo 'Ansible lint test: fail' && exit 1)
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
