--- a/tests/includes/pre_Debian.yml
+++ b/tests/includes/pre_Debian.yml
@@ -14,12 +14,11 @@
       - apt-transport-https
       - ca-certificates
       - curl
+      - gpg
       - lsb-release
       - nginx
       - vim
 
 - name: INCLUDE_TASKS | Sury
   include_tasks: Debian/sury.yml
-  when:
-    ((ansible_distribution_major_version is version('9', 'eq')) and (php_version is version('7.1', 'ge'))) or
-    ((ansible_distribution_major_version is version('10', 'eq')) and (php_version is version('7.4', 'ge')))
+  when: php_version != php_default_version
