--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,12 +39,15 @@
   file:
     path: /etc/ansible/facts.d
     state: directory
-    recurse: yes
+    recurse: true
 
 - name: COPY | Manage facts
   copy:
     content: "{ \"fpm_pool\": {{ php_fpm_full_pool | to_nice_json }} }"
     dest: /etc/ansible/facts.d/hanxhx_php.fact
+    owner: root
+    group: root
+    mode: 0644
   register: f
 
 - name: SETUP | Gathers new facts
@@ -57,7 +60,7 @@
   apt:
     pkg: "{{ pkgs }}"
     state: present
-    update_cache: yes
+    update_cache: true
     cache_valid_time: 3600
   vars:
     pkgs: "{{ php_packages + php_extra_packages | flatten }}"
@@ -94,18 +97,18 @@
 
 - block:
 
-  - name: COMMAND | Check if PHP-FPM is started (Docker)
-    command: 'service {{ php_fpm_service }} status'
-    args:
-      warn: false
-    register: dps
-    changed_when: false
-    failed_when: false
+    - name: COMMAND | Check if PHP-FPM is started (Docker)
+      command: 'service {{ php_fpm_service }} status'
+      args:
+        warn: false
+      register: dps
+      changed_when: false
+      failed_when: false
 
-  - name: COMMAND | Ensure PHP-FPM is started (Docker)
-    command: 'service {{ php_fpm_service }} start'
-    args:
-      warn: false
-    when: dps.stdout.find('is not running') != -1
+    - name: COMMAND | Ensure PHP-FPM is started (Docker)
+      command: 'service {{ php_fpm_service }} start'
+      args:
+        warn: false
+      when: dps.stdout.find('is not running') != -1
 
   when: php_install_fpm and ansible_virtualization_type == 'docker'
