--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,28 +6,28 @@ galaxy_info:
   license: GPLv2
   min_ansible_version: 2.11
   platforms:
-  - name: Debian
-    versions:
-    - stretch
-    - buster
-    - bullseye
-  - name: Ubuntu
-    versions:
-    - xenial
-    - bionic
-  - name: FreeBSD
-    versions:
-    - 11.0
-    - 11.1
-    - 12.0
+    - name: Debian
+      versions:
+        - stretch
+        - buster
+        - bullseye
+    - name: Ubuntu
+      versions:
+        - xenial
+        - bionic
+    - name: FreeBSD
+      versions:
+        - 11.0
+        - 11.1
+        - 12.0
   galaxy_tags:
-  - development
-  - web
-  - php
-  - php-fpm
-  - php7
-  - debian
-  - ubuntu
-  - freebsd
+    - development
+    - web
+    - php
+    - fpm
+    - php7
+    - php8
+    - debian
+    - ubuntu
+    - freebsd
 dependencies: []
-
