--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
+---
+
 env:
   global:
     - VAGRANT_VERSION='2.2.18'
   jobs:
-    - PLATFORM='docker-debian-stretch-php70'  ANSIBLE_VERSION='ansible>=2.11,<2.12'
-    - PLATFORM='docker-debian-stretch-php74'  ANSIBLE_VERSION='ansible>=2.11,<2.12'
-    - PLATFORM='docker-debian-buster-php73'   ANSIBLE_VERSION='ansible>=2.11,<2.12'
-    - PLATFORM='docker-debian-bullseye-php74' ANSIBLE_VERSION='ansible>=2.11,<2.12'
-    - PLATFORM='docker-debian-bullseye-php80' ANSIBLE_VERSION='ansible>=2.11,<2.12'
-    - PLATFORM='docker-debian-buster-php74'   ANSIBLE_VERSION='ansible>=2.11,<2.12'
-    - PLATFORM='docker-ubuntu-xenial-php70'   ANSIBLE_VERSION='ansible>=2.11,<2.12'
-    - PLATFORM='docker-ubuntu-bionic-php72'   ANSIBLE_VERSION='ansible>=2.11,<2.12'
+    - PLATFORM='docker-debian-stretch-php70'  ANSIBLE_VERSION='>=2.11,<2.12'
+    - PLATFORM='docker-debian-stretch-php74'  ANSIBLE_VERSION='>=2.11,<2.12'
+    - PLATFORM='docker-debian-buster-php73'   ANSIBLE_VERSION='>=2.11,<2.12'
+    - PLATFORM='docker-debian-bullseye-php74' ANSIBLE_VERSION='>=2.11,<2.12'
+    - PLATFORM='docker-debian-bullseye-php80' ANSIBLE_VERSION='>=2.11,<2.12'
+    - PLATFORM='docker-debian-buster-php74'   ANSIBLE_VERSION='>=2.11,<2.12'
+    - PLATFORM='docker-ubuntu-xenial-php70'   ANSIBLE_VERSION='>=2.11,<2.12'
+    - PLATFORM='docker-ubuntu-bionic-php72'   ANSIBLE_VERSION='>=2.11,<2.12'
 
 os:
   - linux
