--- a/tests/includes/pre_Debian.yml
+++ b/tests/includes/pre_Debian.yml
@@ -7,7 +7,7 @@
 - name: APT | Install packages
   apt:
     pkg: "{{ p }}"
-    update_cache: yes
+    update_cache: true
     cache_valid_time: 3600
   vars:
     p:
