--- a/tasks/xdebug.yml
+++ b/tasks/xdebug.yml
@@ -3,7 +3,7 @@
 - block:
 
     - name: APT | Install xdebug
-      apt:
+      ansible.builtin.apt:
         pkg: "{{ php_xdebug_package }}"
         state: present
         update_cache: true
@@ -11,12 +11,12 @@
       when: ansible_os_family == 'Debian'
 
     - name: PKGNG | Install xdebug
-      pkgng:
+      ansible.builtin.pkgng:
         name: "{{ php_xdebug_package }}"
       when: ansible_os_family == 'FreeBSD' and php_xdebug_package is defined
 
     - name: TEMPLATE | Deploy module configurations
-      template:
+      ansible.builtin.template:
         src: "etc/__php__/mods-available/xdebug.ini.j2"
         dest: "{{ php_mods_dir }}/xdebug.ini"
         owner: root
@@ -28,13 +28,13 @@
 - block:
 
     - name: APT | Uninstall xdebug
-      apt:
+      ansible.builtin.apt:
         pkg: "{{ php_xdebug_package }}"
         state: absent
       when: ansible_os_family == 'Debian'
 
     - name: PKGNG | Uninstall xdebug
-      pkgng:
+      ansible.builtin.pkgng:
         name: "{{ php_xdebug_package }}"
         state: absent
       when: ansible_os_family == 'FreeBSD'
