--- a/tests/includes/pre_Debian.yml
+++ b/tests/includes/pre_Debian.yml
@@ -1,11 +1,11 @@
 ---
 
 - name: SET_FACT | Prepare test vars
-  set_fact:
+  ansible.builtin.set_fact:
     __nginx_conf: /etc/nginx/nginx.conf
 
 - name: APT | Install packages
-  apt:
+  ansible.builtin.apt:
     pkg: "{{ p }}"
     update_cache: true
     cache_valid_time: 3600
@@ -20,5 +20,5 @@
       - vim
 
 - name: INCLUDE_TASKS | Sury
-  include_tasks: Debian/sury.yml
+  ansible.builtin.include_tasks: Debian/sury.yml
   when: php_version != php_default_version
