Fix pkgng calls

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -71,7 +71,7 @@
   when: ansible_os_family == 'Debian'
 
 - name: PKGNG | Install PHP packages
-  ansible.builtin.pkgng:
+  community.general.pkgng:
     name: "{{ php_packages + php_extra_packages | flatten | join(',') }}"
   notify: restart php-fpm
   when: ansible_os_family == 'FreeBSD'
