--- a/tasks/xdebug.yml
+++ b/tasks/xdebug.yml
@@ -11,7 +11,7 @@
       when: ansible_os_family == 'Debian'
 
     - name: PKGNG | Install xdebug
-      ansible.builtin.pkgng:
+      community.general.pkgng:
         name: "{{ php_xdebug_package }}"
       when: ansible_os_family == 'FreeBSD' and php_xdebug_package is defined
 
@@ -34,7 +34,7 @@
       when: ansible_os_family == 'Debian'
 
     - name: PKGNG | Uninstall xdebug
-      ansible.builtin.pkgng:
+      community.general.pkgng:
         name: "{{ php_xdebug_package }}"
         state: absent
       when: ansible_os_family == 'FreeBSD'
