--- a/tests/includes/pre_FreeBSD.yml
+++ b/tests/includes/pre_FreeBSD.yml
@@ -6,5 +6,5 @@
     php_xdebug_package: 'php72-pecl-xdebug-2.6.1'
 
 - name: PKGNG | Install packages
-  ansible.builtin.pkgng:
+  community.general.pkgng:
     name: ['curl', 'nginx']
